--- a/_src/index.html
+++ b/_src/index.html
@@ -336,105 +336,167 @@
     <section class="projects line-block">
       <div class="projects__inner container container--border">
         <h2 class="projects__title title title--all title--dark">Выполненные<br>проекты</h2>
-        <div class="projects__slider projects-slider swiper-container">
-          <div class="projects-slider__wrapper swiper-wrapper">
-            <div class="projects-slider__item swiper-slide">
-              <ul class="projects-slider__left projects-info">
-                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
-                </li>
-              </ul>
-              <div class="projects-slider__right">
-                <figure class="projects-slider__img-wrap">
-                  <picture>
-                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
-                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
-                  </picture>
-                </figure>
-              </div>
-            </div>
-            <div class="projects-slider__item swiper-slide">
-              <ul class="projects-slider__left projects-info">
-                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
-                </li>
-              </ul>
-              <div class="projects-slider__right">
-                <figure class="projects-slider__img-wrap">
-                  <picture>
-                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
-                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
-                  </picture>
-                </figure>
-              </div>
-            </div>
-            <div class="projects-slider__item swiper-slide">
-              <ul class="projects-slider__left projects-info">
-                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
-                </li>
-              </ul>
-              <div class="projects-slider__right">
-                <figure class="projects-slider__img-wrap">
-                  <picture>
-                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
-                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
-                  </picture>
-                </figure>
-              </div>
-            </div>
-            <div class="projects-slider__item swiper-slide">
-              <ul class="projects-slider__left projects-info">
-                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
-                </li>
-              </ul>
-              <div class="projects-slider__right">
-                <figure class="projects-slider__img-wrap">
-                  <picture>
-                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
-                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
-                  </picture>
-                </figure>
-              </div>
-            </div>
-            <div class="projects-slider__item swiper-slide">
-              <ul class="projects-slider__left projects-info">
-                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
-                </li>
-                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
-                </li>
-              </ul>
-              <div class="projects-slider__right">
-                <figure class="projects-slider__img-wrap">
-                  <picture>
-                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
-                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
-                  </picture>
-                </figure>
+        <div class="projects__block sliders-block">
+          <div class="sliders-block__left slider-info">
+            <div class="slider-info__container swiper-container">
+              <div class="slider-info__wrapper swiper-wrapper">
+                <ul class="slider-info__list swiper-slide">
+                  <li class="slider-info__item"><span class="slider-info__term">Объект</span><span class="slider-info__desc">Квартира, кухня-гостиная 25 м2</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Задача</span><span class="slider-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Решение</span><span class="slider-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к&nbsp;гостиной. Предложено стилевое и&nbsp;цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                  </li>
+                </ul>
+                <ul class="slider-info__list swiper-slide">
+                  <li class="slider-info__item"><span class="slider-info__term">Объект</span><span class="slider-info__desc">Квартира, кухня-гостиная 50 м2</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Задача</span><span class="slider-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Решение</span><span class="slider-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к&nbsp;гостиной. Предложено стилевое и&nbsp;цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                  </li>
+                </ul>
+                <ul class="slider-info__list swiper-slide">
+                  <li class="slider-info__item"><span class="slider-info__term">Объект</span><span class="slider-info__desc">Квартира, кухня-гостиная 75 м2</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Задача</span><span class="slider-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Решение</span><span class="slider-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к&nbsp;гостиной. Предложено стилевое и&nbsp;цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                  </li>
+                </ul>
+                <ul class="slider-info__list swiper-slide">
+                  <li class="slider-info__item"><span class="slider-info__term">Объект</span><span class="slider-info__desc">Квартира, кухня-гостиная 100 м2</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Задача</span><span class="slider-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Решение</span><span class="slider-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к&nbsp;гостиной. Предложено стилевое и&nbsp;цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                  </li>
+                </ul>
+                <ul class="slider-info__list swiper-slide">
+                  <li class="slider-info__item"><span class="slider-info__term">Объект</span><span class="slider-info__desc">Квартира, кухня-гостиная 125 м2</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Задача</span><span class="slider-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                  </li>
+                  <li class="slider-info__item"><span class="slider-info__term">Решение</span><span class="slider-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к&nbsp;гостиной. Предложено стилевое и&nbsp;цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
-          <div class="projects__control">
-            <div class="projects__pagination"></div>
-            <div class="projects__prev"></div>
-            <div class="projects__next"></div>
+          <div class="sliders-block__right slider-interior">
+            <div class="slider-interior__container swiper-container">
+              <ul class="slider-interior__list swiper-wrapper">
+                <li class="slider-interior__item swiper-slide">
+                  <figure class="slider-interior__img-wrap">
+                    <img class="lazyload slider-interior__img" data-src="/img/interior.jpg" data-srcset="/img/interior.jpg 1x, /img/interior@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </figure>
+                </li>
+                <li class="slider-interior__item swiper-slide">
+                  <figure class="slider-interior__img-wrap">
+                    <img class="lazyload slider-interior__img" data-src="/img/interior.jpg" data-srcset="/img/interior.jpg 1x, /img/interior@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </figure>
+                </li>
+                <li class="slider-interior__item swiper-slide">
+                  <figure class="slider-interior__img-wrap">
+                    <img class="lazyload slider-interior__img" data-src="/img/interior.jpg" data-srcset="/img/interior.jpg 1x, /img/interior@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </figure>
+                </li>
+                <li class="slider-interior__item swiper-slide">
+                  <figure class="slider-interior__img-wrap">
+                    <img class="lazyload slider-interior__img" data-src="/img/interior.jpg" data-srcset="/img/interior.jpg 1x, /img/interior@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </figure>
+                </li>
+                <li class="slider-interior__item swiper-slide">
+                  <figure class="slider-interior__img-wrap">
+                    <img class="lazyload slider-interior__img" data-src="/img/interior.jpg" data-srcset="/img/interior.jpg 1x, /img/interior@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </figure>
+                </li>
+              </ul>
+              <div class="slider-interior__controls interior-controls">
+                <div class="interior-controls__counter"><span class="interior-controls__current"></span>/<span class="interior-controls__sum"></span>
+                </div>
+                <div class="interior-controls__pagination"></div>
+                <div class="interior-controls__prev"></div>
+                <div class="interior-controls__next record-link">Следующий</div>
+              </div>
+            </div>
           </div>
         </div><a class="projects__link open-modal-consultation" href="#">Мне нужна консультация</a>
+      </div>
+    </section>
+    <section class="decor">
+      <div class="decor__inner container container--decor">
+        <div class="decor__left decor-left">
+          <div class="decor-left__title-block t-block">
+            <div class="t-block__top"><span class="t-block__num">02</span><span class="t-block__text t-block__text--top"> Декорирование</span>
+            </div>
+            <p class="t-block__text t-block__text--bottom">интерьера</p>
+          </div>
+          <ul class="decor-left__causes causes">
+            <li class="causes__item">
+              <figure class="causes__img-wrap"></figure>
+              <div class="causes__block">
+                <h4 class="causes__title">Сделали ремонт в новом доме</h4>
+                <p class="causes__text">Декоратор поможет оживить новый интерьер, создать уникальную атмосферу и рассказать о вкусах хозяина.</p>
+              </div>
+            </li>
+            <li class="causes__item">
+              <figure class="causes__img-wrap causes__img-wrap--even"></figure>
+              <div class="causes__block">
+                <h4 class="causes__title">Наскучили серые стены</h4>
+                <p class="causes__text">Мы знаем, как взбодрить интерьер без масштабного ремонта. Правильно расставленные акценты и подобранная графика преобразят атмосферу и поднимут настроение в будни.</p>
+              </div>
+            </li>
+          </ul>
+          <div class="decor-left__scenario scenario">
+            <h3 class="scenario__title">Из чего состоит декорирование</h3>
+            <ul class="scenario__list">
+              <li class="scenario__item">
+                <figure class="scenario__img-wrap scenario__img-wrap--1"></figure>
+                <div class="scenario__block">
+                  <h4 class="scenario__title">Выбор стиля </h4>
+                  <p class="scenario__text">Грамотное смешение стилей и оттенков – главный шаг к правильному построению пространства</p>
+                </div>
+              </li>
+              <li class="scenario__item">
+                <figure class="scenario__img-wrap scenario__img-wrap--2"></figure>
+                <div class="scenario__block">
+                  <h4 class="scenario__title">Составление схемы освещения </h4>
+                  <p class="scenario__text">Различные приемы освещения сбалансируют размер комнаты и сфокусирует внимание на ее достоинствах</p>
+                </div>
+              </li>
+              <li class="scenario__item">
+                <figure class="scenario__img-wrap scenario__img-wrap--3"></figure>
+                <div class="scenario__block">
+                  <h4 class="scenario__title">Поиск текстильных решений </h4>
+                  <p class="scenario__text">Шторы, ковры, покрывала, пледы и подушки дарят уют и придают интерьеру завершенный, целостный вид</p>
+                </div>
+              </li>
+              <li class="scenario__item">
+                <figure class="scenario__img-wrap scenario__img-wrap--4"></figure>
+                <div class="scenario__block">
+                  <h4 class="scenario__title">Дополнительные предметы декора и аксессуары</h4>
+                  <p class="scenario__text">Сочетание функциональности и уюта в каждом предмете декора: картины, плакаты, скульптуры, посуда, флористика и не только</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="decor__right specification">
+          <div class="specification__inner"></div>
+          <h3 class="specification__title">3 000 ₽</h3>
+          <div class="specification__box">
+            <p class="specification__what">что входит в стоимость:</p>
+            <ul class="specification__list">
+              <li class="specification__item">
+                <p class="specification__text">анализ интерьера с учетом всех возможностей его преображения</p>
+              </li>
+              <li class="specification__item">
+                <p class="specification__text">предложения по необходимым предметам декора из интернет-магазинов</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
     <section class="modal modal--consultation modal-consultation" id="modal-consultation">
