--- a/_src/index.html
+++ b/_src/index.html
@@ -432,69 +432,83 @@
             </div>
             <p class="t-block__text t-block__text--bottom">интерьера</p>
           </div>
-          <ul class="decor-left__causes causes">
-            <li class="causes__item">
-              <figure class="causes__img-wrap"></figure>
-              <div class="causes__block">
-                <h4 class="causes__title">Сделали ремонт в новом доме</h4>
-                <p class="causes__text">Декоратор поможет оживить новый интерьер, создать уникальную атмосферу и рассказать о вкусах хозяина.</p>
-              </div>
-            </li>
-            <li class="causes__item">
-              <figure class="causes__img-wrap causes__img-wrap--even"></figure>
-              <div class="causes__block">
-                <h4 class="causes__title">Наскучили серые стены</h4>
-                <p class="causes__text">Мы знаем, как взбодрить интерьер без масштабного ремонта. Правильно расставленные акценты и подобранная графика преобразят атмосферу и поднимут настроение в будни.</p>
-              </div>
-            </li>
-          </ul>
+          <div class="causes__wrapper">
+            <h3 class="causes__mane-title">Когда полезно</h3>
+            <ul class="decor-left__causes causes">
+              <li class="causes__item">
+                <figure class="causes__img-wrap"></figure>
+                <div class="causes__block">
+                  <h4 class="causes__title"><span class="causes__ldt">Сделали ремонт в новом доме</span><span class="causes__dt">завершили ремонт</span></h4>
+                  <p class="causes__text causes__ldt">Декоратор поможет оживить новый интерьер, создать уникальную атмосферу и рассказать о вкусах хозяина.</p>
+                  <p class="causes__text causes__dt">Декоратор поможет оживить новый интерьер и&nbsp;создать уникальную атмосферу</p>
+                </div>
+              </li>
+              <li class="causes__item">
+                <figure class="causes__img-wrap causes__img-wrap--even"></figure>
+                <div class="causes__block">
+                  <h4 class="causes__title">Наскучили серые стены</h4>
+                  <p class="causes__text causes__ldt">Мы знаем, как взбодрить интерьер без масштабного ремонта. Правильно расставленные акценты и&nbsp;подобранная графика преобразят атмосферу и&nbsp;поднимут настроение в будни.</p>
+                  <p class="causes__text causes__dt">Правильно расставленные акценты преобразят интерьер</p>
+                </div>
+              </li>
+            </ul>
+          </div>
           <div class="decor-left__scenario scenario">
             <h3 class="scenario__title">Из чего состоит декорирование</h3>
             <ul class="scenario__list">
               <li class="scenario__item">
                 <figure class="scenario__img-wrap scenario__img-wrap--1"></figure>
                 <div class="scenario__block">
-                  <h4 class="scenario__title">Выбор стиля </h4>
-                  <p class="scenario__text">Грамотное смешение стилей и оттенков – главный шаг к правильному построению пространства</p>
+                  <h4 class="scenario__sub-title"><span class="scenario__dt-hidden">Выбор стиля</span><span class="scenario__dt-visually">Выбор стиля и&nbsp;оттенков в&nbsp;интерьере</span></h4>
+                  <p class="scenario__text"><span class="scenario__ldt">Грамотное смешение стилей и оттенков – главный шаг к правильному построению пространства</span><span class="scenario__dt">Грамотное смешение стилей и создание общей стилистики – главный шаг к правильному построению пространства и цветовых решений.</span>
+                  </p>
                 </div>
               </li>
               <li class="scenario__item">
                 <figure class="scenario__img-wrap scenario__img-wrap--2"></figure>
                 <div class="scenario__block">
-                  <h4 class="scenario__title">Составление схемы освещения </h4>
-                  <p class="scenario__text">Различные приемы освещения сбалансируют размер комнаты и сфокусирует внимание на ее достоинствах</p>
+                  <h4 class="scenario__sub-title"><span class="scenario__dt-hidden">Составление схемы освещения</span><span class="scenario__dt-visually">Приемы освещения в&nbsp;пространстве</span></h4>
+                  <p class="scenario__text"><span class="scenario__ldt">Различные приемы освещения  сбалансируют размер комнаты и сфокусируют внимание на ее достоинствах</span><span class="scenario__dt">Использование различных приемов в освещении интерьера  сбалансирует размеры комнаты и сфокусирует внимание на ее достоинствах.</span>
+                  </p>
                 </div>
               </li>
               <li class="scenario__item">
                 <figure class="scenario__img-wrap scenario__img-wrap--3"></figure>
                 <div class="scenario__block">
-                  <h4 class="scenario__title">Поиск текстильных решений </h4>
-                  <p class="scenario__text">Шторы, ковры, покрывала, пледы и подушки дарят уют и придают интерьеру завершенный, целостный вид</p>
+                  <h4 class="scenario__sub-title"><span class="scenario__dt-hidden">Поиск текстильных решений</span><span class="scenario__dt-visually">Поиск текстильных решений</span></h4>
+                  <p class="scenario__text"><span class="scenario__ldt">Шторы, ковры, покрывала, пледы и подушки дарят уют и придают интерьеру завершенный, целостный вид</span><span class="scenario__dt">Шторы, ковры, покрывала, пледы и подушки с интересной фактурой и подходящим цветовым решением дарят уют и придают интерьеру завершенный, целостный вид.</span>
+                  </p>
                 </div>
               </li>
               <li class="scenario__item">
                 <figure class="scenario__img-wrap scenario__img-wrap--4"></figure>
                 <div class="scenario__block">
-                  <h4 class="scenario__title">Дополнительные предметы декора и аксессуары</h4>
-                  <p class="scenario__text">Сочетание функциональности и уюта в каждом предмете декора: картины, плакаты, скульптуры, посуда, флористика и не только</p>
+                  <h4 class="scenario__sub-title"><span class="scenario__dt-hidden">Дополнительные предметы декора и&nbsp;аксессуары</span><span class="scenario__dt-visually">Подбор предметов декора и&nbsp;аксессуаров</span></h4>
+                  <p class="scenario__text"><span class="scenario__ldt">Сочетание функциональности и уюта в каждом предмете декора: картины, плакаты, скульптуры, посуда, флористика и не только</span><span class="scenario__dt">Сочетание функциональности, уюта и эстетики в каждом предмете декора: картины, плакаты, скульптуры, вазы, посуда, флористика и не только.</span>
+                  </p>
                 </div>
               </li>
             </ul>
           </div>
         </div>
         <div class="decor__right specification">
-          <div class="specification__inner"></div>
-          <h3 class="specification__title">3 000 ₽</h3>
-          <div class="specification__box">
-            <p class="specification__what">что входит в стоимость:</p>
-            <ul class="specification__list">
-              <li class="specification__item">
-                <p class="specification__text">анализ интерьера с учетом всех возможностей его преображения</p>
-              </li>
-              <li class="specification__item">
-                <p class="specification__text">предложения по необходимым предметам декора из интернет-магазинов</p>
-              </li>
-            </ul>
+          <div class="specification__inner">
+            <h3 class="specification__title">3 000 ₽</h3>
+            <div class="specification__box">
+              <p class="specification__what">что входит
+                <br>в стоимость:</p>
+              <ul class="specification__list">
+                <li class="specification__item">
+                  <p class="specification__text"><span class="specification__dt-hidden">анализ интерьера с учетом всех возможностей его преображения</span><span class="specification__dt-visually">разбор вашего интерьера</span>
+                  </p>
+                </li>
+                <li class="specification__item">
+                  <p class="specification__text"><span class="specification__dt-hidden">предложения по&nbsp;необходимым предметам декора из&nbsp;интернет-магазинов</span><span class="specification__dt-visually">предложения по&nbsp;необходимым приемам и&nbsp;предметам декора</span>
+                  </p>
+                </li>
+                <li class="specification__cross"></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
