--- a/_src/index.html
+++ b/_src/index.html
@@ -433,7 +433,8 @@
             <p class="t-block__text t-block__text--bottom">интерьера</p>
           </div>
           <div class="causes__wrapper">
-            <h3 class="causes__mane-title">Когда полезно</h3>
+            <h3 class="causes__mane-title causes__mane-title--min-hidden">Когда полезно</h3>
+            <h3 class="causes__mane-title causes__mane-title--min-visually">Когда подойдет</h3>
             <ul class="decor-left__causes causes">
               <li class="causes__item">
                 <figure class="causes__img-wrap"></figure>
@@ -511,6 +512,128 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="example line-block">
+      <div class="example__inner container container--border">
+        <div class="example__col example__col--left example-decor">
+          <h2 class="example-decor__title title title--all title--dark">Примеры<br>декорирования</h2>
+          <p class="example-decor__text">Декорирование - заключительный этап создания интерьера, где будет обеспечено высокое качество жизни!</p>
+          <ul class="example-decor__list">
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="0">Искусство в интерьере (скульптура, живопись)</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="1">Арт объекты в интерьере</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="2">Текстиль в интерьере</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="3">Орнаменты и их смешение</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="4">Цветы (растения, ветки, сухоцветы, мох)</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="5">Ручные работы для декорирования</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="6">Часы как часть интерьера</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="7">Смешение стилей и культур</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+            <li class="example-decor__item"><a class="example-decor__item-text" href="#" data-slider_num="8">Композиции на стол, тумбу и консоль</a><span class="example-decor__point"></span><span class="example-decor__line"></span>
+            </li>
+          </ul><a class="example-decor__link open-modal-consultation" href="#">Записаться</a>
+        </div>
+        <div class="example__col example__col--right example-slider swiper-container">
+          <ul class="example-slider__list swiper-wrapper">
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Искусство в интерьере (скульптура, живопись)</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-1.jpg" data-srcset="/img/examle-bg-1.jpg 1x, /img/examle-bg-1@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Арт объекты в интерьере</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-2.jpg" data-srcset="/img/examle-bg-2.jpg 1x, /img/examle-bg-2@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Текстиль в интерьере</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-3.jpg" data-srcset="/img/examle-bg-3.jpg 1x, /img/examle-bg-3@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Орнаменты и их смешение</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-4.jpg" data-srcset="/img/examle-bg-4.jpg 1x, /img/examle-bg-4@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Цветы (растения, ветки, сухоцветы, мох)</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-5.jpg" data-srcset="/img/examle-bg-5.jpg 1x, /img/examle-bg-5@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Ручные работы для декорирования</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-6.jpg" data-srcset="/img/examle-bg-6.jpg 1x, /img/examle-bg-6@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Часы как часть интерьера</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-7.jpg" data-srcset="/img/examle-bg-7.jpg 1x, /img/examle-bg-7@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Смешение стилей и культур</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-8.jpg" data-srcset="/img/examle-bg-8.jpg 1x, /img/examle-bg-8@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+            <li class="example-slider__item swiper-slide">
+              <h3 class="example-slider__title">Композиции на стол, тумбу и консоль</h3>
+              <figure class="example-slider__img-wrap">
+                <img class="lazyload example-slider__img" data-src="/img/examle-bg-9.jpg" data-srcset="/img/examle-bg-9.jpg 1x, /img/examle-bg-9@2x.jpg 2x" alt="" width="831" height="677" loading="lazy" />
+              </figure>
+            </li>
+          </ul>
+          <div class="example-slider__control example-slider__control--tablet-hidden">
+            <div class="example-slider__prev"></div>
+            <div class="example-slider__index"><span class="example-slider__index-current"></span>/<span class="example-slider__index-sum"></span>
+            </div>
+            <div class="example-slider__next"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="record">
+      <h2 class="record__title">Записаться на консультацию</h2>
+      <div class="record__inner">
+        <figure class="record__img-wrap">
+          <picture>
+            <source media="(max-width: 360px)" data-srcset="/img/record-bg-360.jpg 1x, /img/record-bg-360@2x.jpg 2x" />
+            <source media="(max-width: 412px)" data-srcset="/img/record-bg-412.jpg 1x, /img/record-bg-412@2x.jpg 2x" />
+            <source media="(max-width: 768px)" data-srcset="/img/record-bg-768.jpg 1x, /img/record-bg-768@2x.jpg 2x" />
+            <source media="(max-width: 1200px)" data-srcset="/img/record-bg-1200.jpg 1x, /img/record-bg-1200@2x.jpg 2x" />
+            <source media="(max-width: 1440px)" data-srcset="/img/record-bg-1440.jpg 1x, /img/record-bg-1440@2x.jpg 2x" />
+            <img class="lazyload record__img" data-src="/img/record-bg.jpg" data-srcset="/img/record-bg.jpg 1x, /img/record-bg@2x.jpg 2x" alt="Записаться на консультацию" width="1920" height="613" loading="lazy" />
+          </picture>
+        </figure>
+        <form class="record__form record-form" action="#" method="post" name="record-form-2">
+          <fieldset class="record-form__field">
+            <legend class="record-form__title title title--all title--white">Записаться на&nbsp;консультацию</legend>
+            <p class="record-form__text">C вами свяжется дизайнер и ответит на все вопросы</p>
+            <div class="record-form__box">
+              <input class="record-form__input record-form__input--tel mask reset" type="text" name="record-form-tel-2" placeholder="Ваш телефон" required id="record-form-tel-2">
+              <label class="record-form__label" for="record-form-tel-2"></label>
+              <button class="record-form__btn" type="submit">Заказать звонок</button>
+            </div>
+            <div class="record-form__box personal-box">
+              <input class="personal-box__input" type="checkbox" checked name="record-form-personal-2" id="record-form-personal-2">
+              <label class="personal-box__label" for="record-form-personal-2">Отправляя данные, вы соглашаетесь с&nbsp;Политикой конфиденциальности</label>
+            </div>
+          </fieldset>
+        </form>
       </div>
     </section>
     <section class="modal modal--consultation modal-consultation" id="modal-consultation">
